Added description on scaling as todo in latex

--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -178,7 +178,7 @@
   \label{projections12}
  \end{figure}
  
- Skaliert man Flügel und Beine um Faktor $1000$ kleiner, so verschwinden die Cluster (siehe Abbildung ...) \todo{Skalierung Beschreiben (auch schon in den vorherigen Abschnitten) und Abbildungen einfügen}
+ Skaliert man Flügel und Beine um Faktor $1000$ kleiner, so verschwinden die Cluster (siehe Abbildung ...) \todo{Skalierung Beschreiben (auch schon in den vorherigen Abschnitten), Veränderung der betragsmäßig größte Einträge in ersten 4 Eigenvektoren erwähnen (beim 4. Eigenvektor ist das Gewicht groß, obwohl runterskaliert, *1000 ist aber auch nur *4 wegen log) und Abbildungen einfügen}
  
 
  %- - - - - - - - - - - - - - - - - -
