Note on pseudorandom numbers

--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -100,6 +100,7 @@
 \begin{itemize}
  \item Repräsentation des Zustands als Hierarchie von einzelnen Komponenten (terminale sowie nichtterminale).
  \item Übersetzung in ein 3D-Modell: zunächst .obj, später Verwendung von OpenGL mit vertex shadern etc.\
+ \item linearer Kongruenzgenerator reich für Zufallszahlen aus, da nur wenige erzeugt werden (erkennbare Muster entstehen erst bei mehr Zufallszahlen) (erwähnen?)
 \end{itemize}
 
 %--------------------------------
