Min and max distance to mean changed, added colored svgs to latex

--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -117,19 +117,19 @@
   \label{mean_log_weight}
  \end{figure}
  
- Berachtet man die, in jeder Dimension auf das Intervall $[0, 1]$ skalierten Eingabedaten, so hat der Seehund den minimalen Abstand zum Mittelwert (siehe Abbildung \ref{seehund_farbig}).
+ Berachtet man die, in jeder Dimension auf das Intervall $[0, 1]$ skalierten Eingabedaten \todo{und alle anderen Anpassungen inkl. runterskalierte Flügel, Arme und Gewicht}, so hat der Klippschliefer den minimalen Abstand zum Mittelwert (siehe Abbildung \ref{klippschliefer_farbig}).
  
  Den maximalen Abstand hat die Schlange. Hier muss man aber dazu sagen, dass die Schlange der einzige Datenpunkt ohne Skelettbild ist. Das liegt daran, dass es keine seitlichen Abbildungen von ausgestreckten Schlangen gibt. Sie werden eigentlich immer gekrümmt dargestellt, da sonst das Bild sehr lang und schmal werden würde. Deshalb wurde für die Schlange eine horizontale Gerade knapp über dem unteren Bildrand gewählt, die den Rücken darstellen soll. Extremitäten und ersichtliche Punkte an denen der Rücken in Hals oder Schwanz übergeht gibt es ja keine.
  
- Der Punkt mit dem zweitgrößten Abstand zum Mittelwert ist der Schwan (siehe Abbildung \ref{schwan_farbig}).
+ Der Punkt mit dem zweitgrößten Abstand zum Mittelwert ist das Känguru (siehe Abbildung \ref{kaenguru_farbig}).
  
  \begin{figure}
-  \subfloat[Seehund]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Seehund_farbig.png} \label{seehund_farbig}}
+  \subfloat[Klippschliefer]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Klippschliefer_farbig.png} \label{klippschliefer_farbig}}
   \qquad
-  \subfloat[Schwan]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Schwan_farbig.png}\label{schwan_farbig}}
+  \subfloat[Känguru]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Kaenguru_farbig.png}\label{kaenguru_farbig}}
   
-  \caption{Annotierte Bild des Skeletts eines Seehunds(a) und eines Schwans(b). Zusätzlich wurde zum Seehund erhoben:
-  Tierklasse: Säugetier, keine Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $100$k; und zum Schwan: Tierklasse: Vogel, Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $14$kg.}
+  \caption{Annotierte Bild des Skeletts eines Klippschliefers (a) und eines Kängurus(b). Zusätzlich wurde zum Klippschliefer erhoben:
+  Tierklasse: Säugetier, keine Flügel, Anzahl Beine mit Bodenkontakt: $4$, ungefähres Gewicht: $4$kg; und zum Känguru: Tierklasse: Säugetier, keine Flügel, Anzahl Beine mit Bodenkontakt: $2$, ungefähres Gewicht: $50$kg.}
  \end{figure}
 
  
